# tema3pc

./: cerinta.odt
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  README  main.cpp  util.cpp  util.h
server/test/: CMakeLists.txt  testClientInfo.cpp  testSplit.cpp
